# Paper-ptz-subpix-accuracy

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  conanfile.py
executables/: hard_beta_mc.cpp  soft_beta_mc.cpp
include/mc-analysis/: argparse.h  figure8_circle_path.h  generate_config.h  pt_path.h  simulation.h  triple_cosine_path.h  utils.h
python/: generate-plots.py  plotting.py  print-tables.py  reader.py  stats.py
src/: argparse.cpp  figure8_circle_path.cpp  generate_config.cpp  pt_path.cpp  simulation.cpp  triple_cosine_path.cpp  utils.cpp
